Bug 830439: Add error-check for previously-ignored nsresult value in nsWebBrowserFind::GetSearchLimits(). r=mats